[gd_scene load_steps=20 format=3 uid="uid://c6s7o88tyavpj"]

[ext_resource type="PackedScene" uid="uid://cu7ivg1u3vbhl" path="res://src/ui/main_screen/MainUI.tscn" id="1_21fy4"]
[ext_resource type="Script" path="res://src/ui/ship_building/ship_building_view.gd" id="1_ae44n"]
[ext_resource type="Texture2D" uid="uid://d65nfli1chn0" path="res://assets/sprite/square.png" id="2_jcwrl"]
[ext_resource type="Texture2D" uid="uid://umfswvb0k6d6" path="res://assets/sprite/star.png" id="3_74hi2"]
[ext_resource type="Script" path="res://src/ui/ship_building/grid_placement.gd" id="3_tehqe"]
[ext_resource type="PackedScene" uid="uid://b6k7tg1vynpk0" path="res://addons/pixel_planet_generator/Planets/Rivers/Rivers.tscn" id="4_4v6ii"]
[ext_resource type="Texture2D" uid="uid://cmbixfktrvffm" path="res://assets/sprite/ship_colored.png" id="5_gakyr"]
[ext_resource type="PackedScene" uid="uid://3slp8ujgyckn" path="res://src/buildings/hab/Hab1.tscn" id="7_8yr63"]
[ext_resource type="Texture2D" uid="uid://p6x8qph6gl3j" path="res://assets/backgrounds/build_frame.png" id="8_fs641"]
[ext_resource type="Texture2D" uid="uid://mcbrkeh8cmp2" path="res://assets/sprite/building_grid.png" id="8_nlf7d"]
[ext_resource type="Texture2D" uid="uid://cygmypnooav7y" path="res://assets/event/Ship_wreak_Pixel.png" id="8_p8t6q"]
[ext_resource type="PackedScene" uid="uid://cxn6drxpjw6ii" path="res://src/buildings/miner/Miner1.tscn" id="11_iprk5"]
[ext_resource type="PackedScene" uid="uid://cga44qrkh08wg" path="res://src/buildings/cryostasis_pod/CryoPod1.tscn" id="11_o0hes"]
[ext_resource type="PackedScene" uid="uid://cymcngb74n5dp" path="res://src/ui/menus/main/SettingMenu.tscn" id="11_t4hll"]
[ext_resource type="PackedScene" uid="uid://bsrgyas0y86au" path="res://src/buildings/cryostasis_pod/CryoPod2.tscn" id="12_acf3b"]
[ext_resource type="PackedScene" uid="uid://fliweg8848gv" path="res://src/buildings/cryostasis_pod/CryoPod3.tscn" id="13_2b3d8"]

[sub_resource type="Gradient" id="Gradient_isfht"]
offsets = PackedFloat32Array(0, 0.295455, 0.736364, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.835294, 1, 1, 1, 0.862745, 1, 1, 1, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4bwrg"]
texture = ExtResource("8_nlf7d")
texture_region_size = Vector2i(32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.5, -13.5, 13, -13.5, 13.5, 13.5, -13.5, 13.5)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14, -13, 14, -13.5, 13.5, 13.5, -14, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.5, -14, 14, -13, 13, 13.5, -13.5, 13)

[sub_resource type="TileSet" id="TileSet_5qrf4"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4bwrg")

[node name="ShipBuildingView" type="Node2D"]
script = ExtResource("1_ae44n")

[node name="Space" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(4806, 28)
scale = Vector2(423.125, 231.219)
texture = ExtResource("2_jcwrl")

[node name="StarCPUParticles2D" type="CPUParticles2D" parent="Space"]
position = Vector2(-7.0192, 1.15042)
amount = 64
lifetime = 8.0
explosiveness = 0.3
randomness = 0.3
texture = ExtResource("3_74hi2")
emission_shape = 3
emission_rect_extents = Vector2(15, 10)
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 0.5
initial_velocity_max = 2.0
angular_velocity_min = -30.0
angular_velocity_max = 30.0
scale_amount_min = 0.25
color_ramp = SubResource("Gradient_isfht")

[node name="EventImageHolder" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(4414, -886)

[node name="EventPlanetHolder" type="Node2D" parent="EventImageHolder"]
position = Vector2(808, 593)
scale = Vector2(10, 10)

[node name="Rivers" parent="EventImageHolder/EventPlanetHolder" instance=ExtResource("4_4v6ii")]

[node name="EventImage" type="Sprite2D" parent="EventImageHolder"]
texture_filter = 1
position = Vector2(67, 837)
scale = Vector2(8, 8)
texture = ExtResource("8_p8t6q")

[node name="ShipSprite" type="Sprite2D" parent="."]
position = Vector2(1430, 189)
scale = Vector2(0.624198, 0.624198)
texture = ExtResource("5_gakyr")

[node name="ShipGrid" type="Node2D" parent="ShipSprite" node_paths=PackedStringArray("tilemap")]
modulate = Color(1, 1, 1, 0.784314)
scale = Vector2(1.60206, 1.60206)
script = ExtResource("3_tehqe")
tilemap = NodePath("TileMap")

[node name="TileMap" type="TileMap" parent="ShipSprite/ShipGrid"]
tile_set = SubResource("TileSet_5qrf4")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 196608, 1, 131068, 196608, 1, 196604, 196608, 1, 262140, 196608, 1, 327676, 196608, 1, 393212, 196608, 1, 458748, 196608, 1, 65533, 196608, 1, 131069, 196608, 1, 196605, 196608, 1, 262141, 196608, 1, 327677, 196608, 1, 393213, 196608, 1, 458749, 196608, 1, -589828, 196608, 1, -524292, 196608, 1, -458756, 196608, 1, -393220, 196608, 1, -327684, 196608, 1, -262148, 196608, 1, -196612, 196608, 1, -131076, 196608, 1, -65540, 196608, 1, -4, 196608, 1, -589827, 196608, 1, -524291, 196608, 1, -458755, 196608, 1, -393219, 196608, 1, -327683, 196608, 1, -262147, 196608, 1, -196611, 196608, 1, -131075, 196608, 1, -65539, 196608, 1, -3, 196608, 1, -589826, 196608, 1, -524290, 196608, 1, -458754, 196608, 1, -393218, 196608, 1, -327682, 196608, 1, -589825, 196608, 1, -524289, 196608, 1, -458753, 196608, 1, -393217, 196608, 1, -327681, 196608, 1, -458758, 196608, 1, -393222, 196608, 1, -458757, 196608, 1, -393221, 196608, 1, -720898, 196608, 1, -655362, 196608, 1, -720897, 196608, 1, -655361, 196608, 1, -786432, 196608, 1, -720896, 196608, 1, -786431, 196608, 1, -720895, 196608, 1, -786430, 196608, 1, -720894, 196608, 1, -786429, 196608, 1, -720893, 196608, 1, -786428, 196608, 1, -720892, 196608, 1, -786427, 196608, 1, -720891, 196608, 1, -720899, 196608, 1, -655363, 196608, 1, -589829, 196608, 1, -524293, 196608, 1, -458759, 196608, 1, -393223, 196608, 1, 720889, 196608, 1, 786425, 196608, 1, 720890, 196608, 1, 786426, 196608, 1, 720891, 196608, 1, 786427, 196608, 1, 720892, 196608, 1, 786428, 196608, 1, 720893, 196608, 1, 786429, 196608, 1, 786430, 196608, 1, 786431, 196608, 1, 720896, 196608, 1, 458747, 196608, 1, 524283, 196608, 1, 589819, 196608, 1, 655355, 196608, 1, 524284, 196608, 1, 589820, 196608, 1, 655356, 196608, 1, 524285, 196608, 1, 589821, 196608, 1, 655357, 196608, 1, -327685, 196608, 1, -262149, 196608, 1, -196613, 196608, 1, -131077, 196608, 1, -65541, 196608, 1, -5, 196608, 1, 65531, 196608, 1, 131067, 196608, 1, 196603, 196608, 1, 262139, 196608, 1, 327675, 196608, 1, 393211, 196608, 1, -655360, 196608, 1, -589824, 196608, 1, -524288, 196608, 1, -458752, 196608, 1, -393216, 196608, 1, -655359, 196608, 1, -589823, 196608, 1, -524287, 196608, 1, -458751, 196608, 1, -393215, 196608, 1, -655358, 196608, 1, -589822, 196608, 1, -524286, 196608, 1, -458750, 196608, 1, -393214, 196608, 1, -655357, 196608, 1, -589821, 196608, 1, -524285, 196608, 1, -458749, 196608, 1, -393213, 196608, 1, -655356, 196608, 1, -589820, 196608, 1, -524284, 196608, 1, -458748, 196608, 1, -393212, 196608, 1, -524283, 196608, 1, -458747, 196608, 1, -393211, 196608, 1, -327675, 196608, 1, -262139, 196608, 1, -196603, 196608, 1, -131067, 196608, 1, -65531, 196608, 1, 5, 196608, 1, 65541, 196608, 1, 131077, 196608, 1, 196613, 196608, 1, 262149, 196608, 1, -524282, 196608, 1, -458746, 196608, 1, -393210, 196608, 1, -327674, 196608, 1, -262138, 196608, 1, -196602, 196608, 1, -131066, 196608, 1, -65530, 196608, 1, 6, 196608, 1, 65542, 196608, 1, 131078, 196608, 1, 196614, 196608, 1, 262150, 196608, 1, 524293, 196608, 1, 589829, 196608, 1, 524294, 196608, 1, 589830, 196608, 1, 393221, 196608, 1, 458757, 196608, 1, 393222, 196608, 1, 458758, 196608, 1, 327685, 196608, 1, 327686, 196608, 1, 720897, 196608, 1, 720898, 196608, 1, 720899, 196608, 1, 720900, 196608, 1, 655365, 196608, 1, 720901, 196608, 1, 655366, 196608, 1, 720902, 196608, 1, 851963, 196608, 1, 917499, 196608, 1, 851964, 196608, 1, 917500, 196608, 1, 851965, 196608, 1, 917501, 196608, 1, 851966, 196608, 1, 917502, 196608, 1, 851967, 196608, 1, 917503, 196608, 1, 786432, 196608, 1, 851968, 196608, 1, 786433, 196608, 1, 851969, 196608, 1, 786434, 196608, 1, 851970, 196608, 1, 786435, 196608, 1, 851971, 196608, 1, 786436, 196608, 1, 851972, 196608, 1, 983037, 196608, 1, 1048573, 196608, 1, 983038, 196608, 1, 1048574, 196608, 1, 983039, 196608, 1, 1048575, 196608, 1, 917504, 196608, 1, 983040, 196608, 1, 917505, 196608, 1, 983041, 196608, 1, 917506, 196608, 1, 983042, 196608, 1, 917507, 196608, 1, 983043, 196608, 1, 917508, 196608, 1, 983044, 196608, 1, -262146, 196608, 1, -196610, 196608, 1, -131074, 196608, 1, -65538, 196608, 1, -2, 196608, 1, 65534, 196608, 1, 131070, 196608, 1, 196606, 196608, 1, 262142, 196608, 1, 327678, 196608, 1, 393214, 196608, 1, 458750, 196608, 1, 524286, 196608, 1, 589822, 196608, 1, 655358, 196608, 1, 720894, 196608, 1, 589823, 196608, 1, 655359, 196608, 1, 720895, 196608, 1, 524288, 196608, 1, 589824, 196608, 1, 655360, 196608, 1, 524289, 196608, 1, 589825, 196608, 1, 655361, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 655362, 196608, 1, 524291, 196608, 1, 589827, 196608, 1, 655363, 196608, 1, 524292, 196608, 1, 589828, 196608, 1, 655364, 196608, 1, -262145, 196608, 1, -327680, 196608, 1, -327679, 196608, 1, -327678, 196608, 1, -327677, 196608, 1, -327676, 196608, 1, -262141, 196608, 1, -196605, 196608, 1, -131069, 196608, 1, -65533, 196608, 1, 3, 196608, 1, 65539, 196608, 1, 131075, 196608, 1, 196611, 196608, 1, 262147, 196608, 1, 327683, 196608, 1, 393219, 196608, 1, 458755, 196608, 1, -262140, 196608, 1, -196604, 196608, 1, -131068, 196608, 1, -65532, 196608, 1, 4, 196608, 1, 65540, 196608, 1, 131076, 196608, 1, 196612, 196608, 1, 262148, 196608, 1, 327684, 196608, 1, 393220, 196608, 1, 458756, 196608, 1, 458754, 196608, 1, -262142, 196608, 1, -262143, 196608, 1, -196607, 196608, 1, -196606, 196608, 1, 393218, 196608, 1, 393217, 196608, 1, 458753, 196608, 1)

[node name="Blockoff1" type="Sprite2D" parent="ShipSprite/ShipGrid"]
position = Vector2(-96, 64.9998)
scale = Vector2(1.90625, 7.87498)
texture = ExtResource("2_jcwrl")

[node name="Blockoff2" type="Sprite2D" parent="ShipSprite/ShipGrid"]
position = Vector2(29.9999, -288.999)
scale = Vector2(4.09374, 3.06249)
texture = ExtResource("2_jcwrl")

[node name="Sprite" type="Sprite2D" parent="ShipSprite/ShipGrid/Blockoff2"]
position = Vector2(-47.145, 20.4082)
scale = Vector2(0.480916, 0.362245)
texture = ExtResource("2_jcwrl")

[node name="Sprite2" type="Sprite2D" parent="ShipSprite/ShipGrid/Blockoff2"]
position = Vector2(-38.8397, -0.326523)
scale = Vector2(0.232825, 0.283163)
texture = ExtResource("2_jcwrl")

[node name="Blockoff3" type="Sprite2D" parent="ShipSprite/ShipGrid"]
position = Vector2(29.9999, 416.999)
scale = Vector2(4.09374, 3.06249)
texture = ExtResource("2_jcwrl")

[node name="Sprite" type="Sprite2D" parent="ShipSprite/ShipGrid/Blockoff3"]
position = Vector2(-47.145, -20.2449)
scale = Vector2(0.480916, 0.362245)
texture = ExtResource("2_jcwrl")

[node name="Sprite2" type="Sprite2D" parent="ShipSprite/ShipGrid/Blockoff3"]
position = Vector2(-38.8397, 0.653046)
scale = Vector2(0.232825, 0.283163)
texture = ExtResource("2_jcwrl")

[node name="Hab1" parent="ShipSprite/ShipGrid" instance=ExtResource("7_8yr63")]
position = Vector2(65.9999, -95.9997)
placed = true
building_complete = true

[node name="Hab2" parent="ShipSprite/ShipGrid" instance=ExtResource("7_8yr63")]
position = Vector2(129, -95.9998)
placed = true
building_complete = true

[node name="Hab3" parent="ShipSprite/ShipGrid" instance=ExtResource("7_8yr63")]
position = Vector2(97.9998, -96.9998)
placed = true
building_complete = true

[node name="Miner" parent="ShipSprite/ShipGrid" instance=ExtResource("11_iprk5")]
position = Vector2(129, 32.9999)
placed = true
building_complete = true

[node name="Miner2" parent="ShipSprite/ShipGrid" instance=ExtResource("11_iprk5")]
position = Vector2(128, 63.9998)
placed = true
building_complete = true

[node name="CryoPod" parent="ShipSprite/ShipGrid" instance=ExtResource("11_o0hes")]
position = Vector2(192, -223.999)
placed = true
building_complete = true

[node name="CryoPodArray" parent="ShipSprite/ShipGrid" instance=ExtResource("12_acf3b")]
position = Vector2(192, 30.9999)
placed = true
building_complete = true

[node name="CryoPodHub" parent="ShipSprite/ShipGrid" instance=ExtResource("13_2b3d8")]
position = Vector2(175, 272.999)
placed = true
building_complete = true

[node name="ShipBuildFrame" type="Sprite2D" parent="ShipSprite"]
position = Vector2(17.6225, 105.736)
texture = ExtResource("8_fs641")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainUI" parent="UI" node_paths=PackedStringArray("ship_sprite", "ship_build_frame", "ship_grid", "camera", "mid_view_marker", "far_view_marker", "space_background", "event_image_holder") instance=ExtResource("1_21fy4")]
ship_sprite = NodePath("../../ShipSprite")
ship_build_frame = NodePath("../../ShipSprite/ShipBuildFrame")
ship_grid = NodePath("../../ShipSprite/ShipGrid")
camera = NodePath("../../Camera2D")
mid_view_marker = NodePath("../../MidViewMarker")
far_view_marker = NodePath("../../FarViewMarker")
space_background = NodePath("../../Space")
event_image_holder = NodePath("../../EventImageHolder")

[node name="SettingMenu" parent="UI" instance=ExtResource("11_t4hll")]
visible = false
offset_left = -237.0
offset_top = -275.0
offset_right = 304.0
offset_bottom = 250.0

[node name="StartTutorialTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MidViewMarker" type="Marker2D" parent="."]
position = Vector2(2336, 160)

[node name="FarViewMarker" type="Marker2D" parent="."]
position = Vector2(4000, 77)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="StartTutorialTimer" to="." method="_on_start_tutorial_timer_timeout"]
